--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,11 @@
-version: '3.8'
+include:
+  - docker-compose.base.yml
 
 services:
   web:
-    build:
-      context: ./
-      dockerfile: dockerfiles/app.dockerfile
-    volumes:
-      - ./:/workspace:cached
-    env_file:
-      - .env
+    extends:
+      file: docker-compose.base.yml
+      service: app_base
     command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
     container_name: fastapi-app
     ports:
@@ -16,21 +13,15 @@ services:
     depends_on:
       web-db:
         condition: service_healthy
+
   web-db:
-    build:
-      context: ./
-      dockerfile: dockerfiles/db.dockerfile
+    extends:
+      file: docker-compose.base.yml
+      service: db_base
     container_name: fastapi-db
     expose:
       - "5432:5432"
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    env_file:
-      - .env
     healthcheck:
       test: [ "CMD", "pg_isready", "-U", "postgres" ]
       interval: 5s
       retries: 5
-
-volumes:
-  postgres-data:
