--- a/docker/docker-compose.base.yml
+++ b/docker/docker-compose.base.yml
@@ -2,7 +2,7 @@ services:
   app_base:
     build:
       context: ..
-      dockerfile: ../dockerfiles/app.dockerfile
+      dockerfile: dockerfiles/app.dockerfile
     volumes:
       - ..:/workspace:cached
     env_file:
@@ -11,7 +11,7 @@ services:
   db_base:
     build:
       context: ..
-      dockerfile: ../dockerfiles/db.dockerfile
+      dockerfile: dockerfiles/db.dockerfile
     volumes:
       - postgres-data:/var/lib/postgresql/data
     env_file:
