--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -9,6 +9,7 @@ services:
       - ..:/workspace:cached
 
     environment:
+      PYTHONPATH: /workspace
       DATABASE_URI: postgresql://postgres:postgres@web-db/web
       DATABASE_URI_TEST: postgresql://postgres:postgres@web-db/web_test
 
