--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
+PYTHONPATH=/workspace
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 DATABASE_URI=postgresql://postgres:postgres@web-db:5432/web
