Update configuration and development setup files

--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -10,6 +10,7 @@ services:
 
     environment:
       PYTHONPATH: /workspace
+      MODEL_PATH: /workspace/artifacts/model.joblib
       DATABASE_URI: postgresql://postgres:postgres@web-db/web
       DATABASE_URI_TEST: postgresql://postgres:postgres@web-db/web_test
 
