--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 PYTHONPATH=/workspace
+MODEL_PATH=/workspace/artifacts/model.joblib
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 DATABASE_URI=postgresql://postgres:postgres@web-db:5432/web
