--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -7,39 +7,23 @@ services:
       dockerfile: dockerfiles/app.dockerfile
     volumes:
       - ..:/workspace:cached
-
     environment:
       PYTHONPATH: /workspace
       MODEL_PATH: /workspace/artifacts/model.joblib
-      DATABASE_URI: postgresql://postgres:postgres@web-db/web
-      DATABASE_URI_TEST: postgresql://postgres:postgres@db_test/web_test
-
+      DATABASE_URI: postgresql://postgres:postgres@web-db:5432/web
     command: sleep infinity
     depends_on:
       - web-db
-      - db_test
 
   web-db:
-    build:
-      context: ..
-      dockerfile: dockerfiles/db.dockerfile
+    image: postgres:15
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-
-  db_test:
-    image: postgres:15.4
-    restart: unless-stopped
-    environment:
-      POSTGRES_DB: web_test
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    volumes:
-      - db_test_data:/var/lib/postgresql/data
+      POSTGRES_DB: web
 
 volumes:
   postgres-data:
-  db_test_data:
