Edit database conf in VC settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
       "name": "Container database",
       "driver": "PostgreSQL",
       "previewLimit": 50,
-      "server": "localhost",
+      "server": "web-db",
       "port": 5432,
       "database": "web",
       "username": "postgres",
