chore: migrate local tooling to uv and update container/dev environment setup

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 PYTHONPATH=/workspace
 MODEL_PATH=/workspace/artifacts/model.joblib
+DATABASE_URI=postgresql://postgres:postgres@web-db:5432/web
+DATABASE_URI_TEST=postgresql://postgres:postgres@web-test-db:5432/web_test
+LOGFIRE_TOKEN=<your_logfire_token_here>
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-DATABASE_URI=postgresql://postgres:postgres@web-db:5432/web
-DATABASE_URI_TEST=postgresql://postgres:postgres@web-db:5432/web_test
