--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,10 +8,7 @@
       "extensions": [
         "ms-python.debugpy",
         "ms-python.python",
-        "ms-python.vscode-pylance",
-        "mtxr.sqltools",
-        "mtxr.sqltools-driver-pg",
-        "charliermarsh.ruff"
+        "ms-python.vscode-pylance"
       ]
     }
   },
