--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -7,23 +5,29 @@ services:
       dockerfile: dockerfiles/app.dockerfile
     volumes:
       - ..:/workspace:cached
-    environment:
-      PYTHONPATH: /workspace
-      MODEL_PATH: /workspace/artifacts/model.joblib
-      DATABASE_URI: postgresql://postgres:postgres@web-db:5432/web
+    env_file:
+      - ../.env
     command: sleep infinity
     depends_on:
       - web-db
+      - web-test-db
 
   web-db:
     image: postgres:15
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    env_file:
+      - ../.env
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: web
+
+  web-test-db:
+    image: postgres:15
+    env_file:
+      - ../.env
+    environment:
+      POSTGRES_DB: web_test
 
 volumes:
   postgres-data:
