--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,98 @@
-[tool.ruff]
-line-length = 88
-target-version = "py311"
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "ml-fraud-detection-api"
+version = "0.1.0"
+description = "ML Fraud Detection API"
+requires-python = ">=3.11"
+dependencies = [
+    "fastapi==0.115.3",
+    "uvicorn==0.32.0",
+    "httpx==0.27.2",
+    "asyncpg==0.30.0",
+    "sqlalchemy==2.0.36",
+    "psycopg2-binary==2.9.10",
+    "scikit-learn==1.6.1",
+    "joblib==1.5.3",
+    "pandas==2.3.3",
+    "numpy>=2.0",
+    "pydantic-settings==2.7.1",
+    "logfire[fastapi]>=4.25.0",
+]
+
+[tool.setuptools]
+packages = ["app"]
+
+[project.optional-dependencies]
+dev = [
+    "mypy>=1.15.0",
+    "pyright>=1.1.394",
+    "pytest>=9.0.2",
+    "pytest-cov>=6.0.0",
+    "coverage>=7.6.4",
+    "pydantic-settings==2.7.1",
+    "ruff>=0.9.6",
+    "chainmock==0.8.1",
+]
+
+[dependency-groups]
+dev = [
+    "mypy>=1.15.0",
+    "pyright>=1.1.394",
+    "pytest>=9.0.2",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.9.6",
+]
 
 [tool.ruff.lint]
-# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
-select = ["E", "F", "I"]
-# Ignore the same as flake8 had
-ignore = ["E203"]
+select = [
+    "B",
+    "BLE",
+    "DTZ",
+    "E",
+    "EM",
+    "F",
+    "FA",
+    "I",
+    "PT",
+    "RSE",
+    "RUF",
+    "S",
+    "T20",
+    "TRY",
+    "UP",
+    "W605",
+]
+ignore = [
+    "E111",
+    "E114",
+    "E117",
+    "E501",
+    "PT011",
+    "PT013",
+    "S101",
+    "S110",
+    "S112",
+    "TRY003",
+    "UP007",
+]
 
 [tool.ruff.lint.per-file-ignores]
-# Ignore `E402` (import violations) in all `__init__.py` files
-"__init__.py" = ["E402"]
+"tests/*" = ["DTZ", "S105"]
+"main.py" = ["T20"]
+
+[tool.ruff.format]
+docstring-code-format = true
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+testpaths = ["tests", "app/tests"]
 
 [tool.mypy]
-plugins = ["mypy_django_plugin.main"]
-ignore_missing_imports = true
+python_version = "3.11"
 
 [[tool.mypy.overrides]]
-module = "tests.*"
-ignore_errors = true
+module = ["joblib", "pandas"]
+ignore_missing_imports = true
